--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -10,6 +10,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="../services/user.service.client.js"></script>
     <script src="user-admin.controller.client.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../services/user-admin.service.client.js"></script>
+    <script src="user-admin.controller.client.js"></script>
+
 </head>
 
 <body>
