--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User Admin</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="user-admin.style.client.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -12,52 +12,56 @@
     <script src="user-admin.controller.client.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../services/user-admin.service.client.js"></script>
-    <script src="user-admin.controller.client.js"></script>
-
 </head>
 
 <body>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Password</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Role</th>
-        <th>&nbsp;</th>
-    </tr>
+<div class="container-fluid">
+    <div class="container-fluid">
+        <h1>User Administration</h1>
+    </div>
 
-    <tr class="wbdv-form">
-        <td><input id="usernameFld" class="form-control" placeholder="Username"/></td>
-        <td><input id="passwordFld" class="form-control" placeholder="Password"/></td>
-        <td><input id="firstNameFld" class="form-control" placeholder="First Name"/></td>
-        <td><input id="lastNameFld" class="form-control" placeholder="Last Name"/></td>
-        <td><select id="roleFld" class="form-control">
-            <option value="FACULTY">Faculty</option>
-            <option value="STUDENT">Student</option>
-            <option value="ADMIN">Admin</option>
-        </select></td>
-        <td><span class="pull-right" style="white-space: nowrap">
-            <i class="fa-2x fa fa-plus wbdv-create"></i>
-            <i class="fa-2x fa fa-check wbdv-update"></i>
-        </span></td>
-    </tr>
-    </thead>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Username</th>
+            <th>Password</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Role</th>
+            <th>&nbsp;</th>
+        </tr>
 
-    <tbody class="wbdv-tbody">
-    <tr class="wbdv-template wbdv-user wbdv-hidden">
-        <td class="wbdv-username">ada</td>
-        <td>&nbsp;</td>
-        <td class="wbdv-first-name">Ada</td>
-        <td class="wbdv-last-name">Lovelace</td>
-        <td class="wbdv-role">FACULTY</td>
-        <td class="wbdv-actions"><span class="pull-right">
-          <i class="fa-2x fa fa-times wbdv-remove"></i>
-          <i class="fa-2x fa fa-pencil wbdv-edit"></i>
-        </span></td>
-    </tr>
-    </tbody>
-</table>
+        <tr class="wbdv-form">
+            <td><input id="usernameFld" class="form-control" title="Enter your username here" placeholder="Username"/></td>
+            <td><input id="passwordFld" class="form-control" title="Enter your password here" placeholder="Password"/></td>
+            <td><input id="firstNameFld" class="form-control" title="Enter your first name here" placeholder="First Name"/></td>
+            <td><input id="lastNameFld" class="form-control" title="Enter your last name here" placeholder="Last Name"/></td>
+            <td><select id="roleFld" class="form-control" title="Select your role within the university here">
+                <option value="FACULTY">Faculty</option>
+                <option value="STUDENT">Student</option>
+                <option value="ADMIN">Admin</option>
+            </select></td>
+            <td><span class="pull-right" style="white-space: nowrap">
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-plus wbdv-create"> Create</i></button>
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-check wbdv-update"> Update</i></button>
+            </span></td>
+        </tr>
+        </thead>
+
+        <tbody class="wbdv-tbody">
+        <tr class="wbdv-template wbdv-user wbdv-hidden">
+            <td class="wbdv-username">ada</td>
+            <td>&nbsp;</td>
+            <td class="wbdv-first-name">Ada</td>
+            <td class="wbdv-last-name">Lovelace</td>
+            <td class="wbdv-role">FACULTY</td>
+            <td class="wbdv-actions"><span class="pull-right">
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+            </span></td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
 </body>
 </html>
