--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>User Admin</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link href="user-admin.style.client.css" rel="stylesheet"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="../services/user.service.client.js"></script>
-    <script src="user-admin.controller.client.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="../webapp.universal.stylesheet.css" rel="stylesheet"/>
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="../services/user-admin.service.client.js"></script>
+    <script src="../services/user.service.client.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
 
         <tbody class="wbdv-tbody">
         <tr class="wbdv-template wbdv-user wbdv-hidden">
-            <td class="wbdv-username">ada</td>
+            <td class="wbdv-username">lovelace.a</td>
             <td>&nbsp;</td>
             <td class="wbdv-first-name">Ada</td>
             <td class="wbdv-last-name">Lovelace</td>
@@ -60,8 +60,33 @@
                 <button class="btn btn-outline-dark"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
             </span></td>
         </tr>
+
+        <tr class="wbdv-template wbdv-user wbdv-hidden">
+            <td class="wbdv-username">liddell.a</td>
+            <td>&nbsp;</td>
+            <td class="wbdv-first-name">Alice</td>
+            <td class="wbdv-last-name">Liddell</td>
+            <td class="wbdv-role">STUDENT</td>
+            <td class="wbdv-actions"><span class="pull-right">
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+            </span></td>
+        </tr>
+
+        <tr class="wbdv-template wbdv-user wbdv-hidden">
+            <td class="wbdv-username">salehi.s</td>
+            <td>&nbsp;</td>
+            <td class="wbdv-first-name">Sina</td>
+            <td class="wbdv-last-name">Salehi</td>
+            <td class="wbdv-role">ADMIN</td>
+            <td class="wbdv-actions"><span class="pull-right">
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+            </span></td>
+        </tr>
         </tbody>
     </table>
-    </div>
+</div>
+<script src="user-admin.controller.client.js"></script>
 </body>
 </html>
