Correct Remove button functionality

--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -42,8 +42,8 @@
                 <option value="ADMIN">Admin</option>
             </select></td>
             <td><span class="pull-right" style="white-space: nowrap">
-                <button class="btn btn-outline-dark wbdv-button-create"><i class="fa-2x fa fa-plus wbdv-create"> Create</i></button>
-                <button class="btn btn-outline-dark wbdv-button-update"><i class="fa-2x fa fa-check wbdv-update"> Update</i></button>
+                <button class="btn btn-outline-dark wbdv-button-create"><i class="fa-2x fa fa-plus wbdv-icon-create"> Create</i></button>
+                <button class="btn btn-outline-dark wbdv-button-update"><i class="fa-2x fa fa-check wbdv-icon-update"> Update</i></button>
             </span></td>
         </tr>
         </thead>
@@ -56,8 +56,8 @@
             <td class="wbdv-last-name">Lovelace</td>
             <td class="wbdv-role">FACULTY</td>
             <td class="wbdv-actions"><span class="pull-right">
-                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
-                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-icon-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-icon-edit"> Edit</i></button>
             </span></td>
         </tr>
 
@@ -68,8 +68,8 @@
             <td class="wbdv-last-name">Liddell</td>
             <td class="wbdv-role">STUDENT</td>
             <td class="wbdv-actions"><span class="pull-right">
-                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
-                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-icon-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-icon-edit"> Edit</i></button>
             </span></td>
         </tr>
 
@@ -80,8 +80,8 @@
             <td class="wbdv-last-name">Salehi</td>
             <td class="wbdv-role">ADMIN</td>
             <td class="wbdv-actions"><span class="pull-right">
-                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-remove"> Remove</i></button>
-                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-edit"> Edit</i></button>
+                <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-icon-remove"> Remove</i></button>
+                <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-icon-edit"> Edit</i></button>
             </span></td>
         </tr>
         </tbody>
