Correct Create button functionality (create new user from input fields, clear input fields when new user is created)

--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -32,11 +32,11 @@
         </tr>
 
         <tr class="wbdv-form">
-            <td><input id="usernameFld" class="form-control" title="Enter your username here" placeholder="Username"/></td>
-            <td><input id="passwordFld" class="form-control" title="Enter your password here" placeholder="Password"/></td>
-            <td><input id="firstNameFld" class="form-control" title="Enter your first name here" placeholder="First Name"/></td>
-            <td><input id="lastNameFld" class="form-control" title="Enter your last name here" placeholder="Last Name"/></td>
-            <td><select id="roleFld" class="form-control" title="Select your role within the university here">
+            <td><input id="usernameFld" class="form-control wbdv-field-username" title="Enter your username here" placeholder="Username"/></td>
+            <td><input id="passwordFld" class="form-control wbdv-field-password" title="Enter your password here" placeholder="Password"/></td>
+            <td><input id="firstNameFld" class="form-control wbdv-field-firstName" title="Enter your first name here" placeholder="First Name"/></td>
+            <td><input id="lastNameFld" class="form-control wbdv-field-lastName" title="Enter your last name here" placeholder="Last Name"/></td>
+            <td><select id="roleFld" class="form-control wbdv-field-role" title="Select your role within the university here">
                 <option value="FACULTY">Faculty</option>
                 <option value="STUDENT">Student</option>
                 <option value="ADMIN">Admin</option>
