Add User-Admin Service (init)

--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -50,7 +50,7 @@
         </thead>
 
         <tbody class="wbdv-tbody">
-        <tr class="wbdv-template wbdv-user wbdv-hidden">
+        <!--<tr class="wbdv-template wbdv-user wbdv-hidden">
             <td class="wbdv-username">lovelace.a</td>
             <td>&nbsp;</td>
             <td class="wbdv-first-name">Ada</td>
@@ -84,7 +84,7 @@
                 <button class="btn btn-outline-dark wbdv-button-remove"><i class="fa-2x fa fa-times wbdv-icon-remove"> Remove</i></button>
                 <button class="btn btn-outline-dark wbdv-button-edit"><i class="fa-2x fa fa-pencil wbdv-icon-edit"> Edit</i></button>
             </span></td>
-        </tr>
+        </tr>-->
         </tbody>
     </table>
 </div>
