Reduce button size (all buttons)

--- a/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/src/main/webapp/user-admin/user-admin.template.client.html
@@ -91,10 +91,10 @@
 
             <td><span class="pull-right"
                       style="white-space: nowrap">
-                <button class="btn btn-outline-dark wbdv-button-create">
+                <button class="btn btn-sm btn-outline-dark wbdv-button-create">
                     <i class="fa-2x fa fa-plus wbdv-icon-create"> Create</i>
                 </button>
-                <button class="btn btn-outline-dark wbdv-button-update">
+                <button class="btn btn-sm btn-outline-dark wbdv-button-update">
                     <i class="fa-2x fa fa-check wbdv-icon-update"> Update</i>
                 </button>
             </span></td>
