FINAL COMMIT - USE FOR GRADING - Update README.md and update navigation bars on all pages to allow access to User Administration page (if user is logged in) - FINAL COMMIT - USE FOR GRADING

--- a/src/main/webapp/courseeditor/courseeditor.template.client.html
+++ b/src/main/webapp/courseeditor/courseeditor.template.client.html
@@ -20,6 +20,9 @@
                     <a class="nav-link" href="../index.html">Course List (Home)</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../user-admin/user-admin.template.client.html">User Administration</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
                 </li>
                 <li class="nav-item">
