--- a/src/main/webapp/courseeditor/cs5610.courseeditor.template.client.html
+++ b/src/main/webapp/courseeditor/cs5610.courseeditor.template.client.html
@@ -20,6 +20,9 @@
                     <a class="nav-link" href="../index.html">Course List (Home)</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../user-admin/user-admin.template.client.html">User Administration</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
                 </li>
                 <li class="nav-item">
