--- a/src/main/webapp/courselist/courselist.template.client.html
+++ b/src/main/webapp/courselist/courselist.template.client.html
@@ -19,6 +19,9 @@
                 <a class="nav-link" href="../courselist/courselist.template.client.html">Course List (Home)</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="../user-admin/user-admin.template.client.html">User Administration</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
             </li>
             <li class="nav-item">
