--- a/src/main/webapp/login/login.template.client.html
+++ b/src/main/webapp/login/login.template.client.html
@@ -11,9 +11,9 @@
 
 <body>
 <div class="container-fluid">
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">NEUcourses</a>
-    </header>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">NEUcourses</a>
+    </nav>
 </div>
 
 <div class="container-fluid">
