--- a/src/main/webapp/profile/profileupdate.template.client.html
+++ b/src/main/webapp/profile/profileupdate.template.client.html
@@ -11,20 +11,27 @@
 
 <body>
 <div class="container-fluid">
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="../index.html">NEUcourses</a>
-        <ul class="navbar-nav px-3">
-            <li class="nav-item">
-                <a class="nav-link" href="../courselist/courselist.template.client.html">Course List (Home)</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../login/login.template.client.html">Log Out</a>
-            </li>
-        </ul>
-    </header>
+    <!-- Navigation Bar (Top of Page) Start -->
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <a class="navbar-brand" href="../index.html">NEUcourses</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Course List (Home)</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../user-admin/user-admin.template.client.html">User Administration</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../login/login.template.client.html">Log Out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- Navigation Bar (Top of Page) End -->
 </div>
 
 <div class="container-fluid">
